--- a/AngularCRUD/src/app/Components/registration/registration.component.html
+++ b/AngularCRUD/src/app/Components/registration/registration.component.html
@@ -67,7 +67,7 @@
                                     should be minimum 8 and maximum 32 characters long.</small>
                             </div>
                         </div>
-                        <div class="form-group mb-3">
+                        <!-- <div class="form-group mb-3">
                             <label class="label" for="password">Confirm Password</label>
                             <input type="password" class="form-control" placeholder="Password" required>
                             <div
@@ -76,7 +76,7 @@
                                     *ngIf="getControl('password')?.errors?.['required'] && getControl('password')?.errors?.['PasswordNoMatch']">Password
                                     field is requird</small>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign
                                 Up</button>
