--- a/AngularCRUD/src/app/Components/Sections/home/home.component.html
+++ b/AngularCRUD/src/app/Components/Sections/home/home.component.html
@@ -1,1 +1,40 @@
-<p>home works!</p>
+<div class="constainer">
+    <div class="justify-content-center-end p-3">
+        <button class="logout-btn btn btn-danger ms-3 mt-3" type="button" (click)="logOut()">Logout</button>
+    </div>
+
+    <div class="justify-content-center">
+        <table mat-table [dataSource]="studentsData" class="mat-elevation-z8" mat-table-fixed-column>
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef> No. </th>
+                <td mat-cell *matCellDef="let element; let i = index"> {{i + 1}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> Email </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="gender">
+                <th mat-header-cell *matHeaderCellDef> Gender </th>
+                <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="action" *ngIf="student.role == 'admin'">
+                <th mat-header-cell *matHeaderCellDef> Action </th>
+                <td mat-cell *matCellDef="let element">
+                    <button class="logout-btn btn btn-warning ms-3 mt-3" type="button" (click)="delete(element._id)">Delete</button>
+                    <button class="logout-btn btn btn-primary ms-3 mt-3" *ngIf="!element.approve" type="button" (click)="approve(element._id)">Approve</button>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+</div>
